# sagittal_average

./: .gitignore  CITATION.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pytest.yaml
sagittal_average/: command.py  pyproject.toml  sagittal_brain.py  test_sagittal_brain.py
sagittal_average.egg-info/: PKG-INFO  SOURCES.txt
sagittal_average/Sagittal_Average.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sagittal_average/sagittal_brain.egg-info/: PKG-INFO  SOURCES.txt
sagittal_average/test/: test_something.py
sagittal_average/tests/: test_sagittal_average.py
tests/: test_sagittal_brain.py
